crates/wdl-analysis/tests/validation/conflicting-sections/source.errors
error: task `foo` contains a conflicting section
   ┌─ tests/validation/conflicting-sections/source.wdl:10:5
   │
 8 │     runtime {}
   │     ------- the conflicting runtime section is defined here
 9 │ 
10 │     requirements {}
   │     ^^^^^^^^^^^^ this requirements section conflicts with a runtime section

error: task `bar` contains a conflicting section
   ┌─ tests/validation/conflicting-sections/source.wdl:18:5
   │
16 │     requirements {}
   │     ------------ the conflicting requirements section is defined here
17 │ 
18 │     runtime {}
   │     ^^^^^^^ this runtime section conflicts with a requirements section

